== v0.6.0
   - add Binding.repl.{disable!,enable!}.
   turn binding.repl.{pry,irb,ripl,auto} into a no-op.
   closes #8.

== v0.5.1
   - $CWD/.binding.repl.rc has precendence over $HOME/.binding.repl.rc
   stupid mistake. $CWD/.binding.repl.rc should be loaded instead of
   $HOME/.binding.repl.rc if it exists.

   - compare ENV["BINDING_REPL_RC"] as a string.
   casting with to_i on nil(the default) returns 0.
   file was never loaded.

== v0.5.0.1
   - documentation fix
   error in documentation

== v0.5.0
   - disable {$HOME,$CWD}/.binding.repl.rc loading
   set ENV["BINDING_REPL_RC"] = "0" to disable load.

== v0.4.1
   - read {$HOME,$CWD}/.binding.repl.rc as JSON
   less security concerns than parsing ruby.

== v0.4.0
   - read {$HOME,$CWD}/.binding.ripl.rc on load
   see README for documentation.

== v0.3.0
   - add Binding.repl.add
   add a ruby console to binding.repl

   - add lib/binding.repl/{pry,irb,ripl}.rb
   individual files for each console that use Binding.repl.add

   - modularize design, cleanup internals
   the anonymous class is gone because constant lookup rules are a
   pain with anonymous classes. The class we create is available at
   Binding.repl and nowhere else, though.

== v0.2.0
   - call IRB.setup() once
   fixes #4

   - add binding.repl.auto
   auto discover the first available console.
   fixes #3

== v0.1.1.1
   - doc improvements

== v0.1.1
   - remove top level constant "BindingMixin" by using const_set
     on anonymous class.

== v0.1.0
   - first release